@startuml

title __LOG_IN's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.onboarding.log_in {
      class com.pis.buy2gether.usecases.onboarding.log_in.LoginActivity {
          - GOOGLE_SIGN_IN : int
          - forgotPassword : TextView
          - google_signin : ImageButton
          - guest : Button
          - image : ImageView
          - log : ImageButton
          - name : TextView
          - pswEditText : TextInputEditText
          - sign : Button
          - userEditText : TextInputEditText
          # onActivityResult()
          # onCreate()
          - animateBackground()
          - session()
          - setup()
          - showHome()
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.onboarding.log_in {
      class com.pis.buy2gether.usecases.onboarding.log_in.LoginViewModel {
          - context : Context
          + saveUserInfo()
          + shakeError()
          ~ LoginViewModel()
          ~ getSession()
          ~ showAlert()
      }
    }
  }
  

  com.pis.buy2gether.usecases.onboarding.log_in.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.pis.buy2gether.usecases.onboarding.log_in.LoginActivity o-- com.pis.buy2gether.usecases.onboarding.log_in.LoginViewModel : viewModel
  com.pis.buy2gether.usecases.onboarding.log_in.LoginViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
